@@ -977,18 +977,17 @@ class JobGeneratorThread (WorkerThread):
                         else:
                             # extract from file or dataset name
                             if taskSpec.useFileAsSourceLFN():
-                                tmpMidStr = ''
                                 for tmpDatasetSpec,tmpFileSpecList in inSubChunk:
                                     if tmpDatasetSpec.isMaster():
-                                        tmpMidStr = tmpFileSpecList[0].lfn
+                                        middleName = tmpFileSpecList[0].extractFieldsStr(taskSpec.getFieldNumToLFN())
                                         break
                             else:
                                 tmpMidStr = jobSpec.prodDBlock.split(':')[-1]
-                            tmpMidStrList = re.split('\.|_tid\d+',tmpMidStr)
-                            if len(tmpMidStrList) >= max(taskSpec.getFieldNumToLFN()):
-                                middleName = ''
-                                for tmpFieldNum in taskSpec.getFieldNumToLFN():
-                                    middleName += '.'+tmpMidStrList[tmpFieldNum-1]
+                                tmpMidStrList = re.split('\.|_tid\d+',tmpMidStr)
+                                if len(tmpMidStrList) >= max(taskSpec.getFieldNumToLFN()):
+                                    middleName = ''
+                                    for tmpFieldNum in taskSpec.getFieldNumToLFN():
+                                        middleName += '.'+tmpMidStrList[tmpFieldNum-1]
                     # set provenanceID
                     provenanceID = None    
                     if useBoundary != None and useBoundary['outMap'] == True:
